--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,7 @@ body {
 
 #header {
     margin: 0;
+    height: 10vh;
     float: inline-start;
     text-align: left;
     background: #000000;
@@ -86,6 +87,7 @@ body {
 
 #main {
     min-width: 100%;
+    height: 80vh;
     background-color: white;
     max-width: 100em;
     padding: 0em 0em 4em;
@@ -148,6 +150,7 @@ body {
 /* Footer */
 
 #footer {
+    height: 10vh;
     padding: 1em 1.5em;
     float: inline-start;
     text-align: center;
