--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,8 @@ a {
 }
 
 body {
+    min-width: 100%;
+    min-height: fit-content;
     background: #000814;
 }
 
@@ -68,13 +70,10 @@ body {
 /* Header */
 
 #header {
+    height: auto;
     margin: 0;
-    height: 10vh;
-    float: inline-start;
-    text-align: left;
-    background: #000000;
-    display: block;
     padding: 1em;
+    background: #000000;
 }
 
 #header h1 {
@@ -87,17 +86,15 @@ body {
 
 #main {
     min-width: 100%;
-    height: 80vh;
+    min-height: 100vh;
     background-color: white;
-    max-width: 100em;
-    padding: 0em 0em 4em;
 }
 
 
 /* resumen */
 
 .resumen {
-    width: 100%;
+    min-width: 100%;
     text-align: center;
     display: block;
 }
@@ -107,6 +104,7 @@ body {
 }
 
 .logo {
+    margin: 0;
     margin-left: 35%;
     width: 30%;
     display: block;
@@ -129,12 +127,14 @@ body {
 /*Redes*/
 
 .redes {
-    margin-top: 10em;
+    min-width: 100%;
+    margin-top: 3em;
     text-align: center;
 }
 
 .redes a {
-    margin: 1em;
+    margin: 2em;
+    display: inline-block;
     border-radius: 60%;
     font-size: 20px;
     background-color: #171717;
@@ -150,13 +150,10 @@ body {
 /* Footer */
 
 #footer {
-    height: 10vh;
     padding: 1em 1.5em;
-    float: inline-start;
     text-align: center;
     background-color: #171717;
     display: block;
-    align-self: flex-end;
 }
 
 #footer .icons {
@@ -174,64 +171,45 @@ a {
 }
 
 
-/*Responsive*/
+/*MEDIA QUERYS*/
+
+
+/* XLarge */
+
+@media screen and (max-width: 1800px) {}
+
+
+/* Large */
+
+@media screen and (max-width: 1280px) {}
+
+
+/* Medium */
+
+@media screen and (max-width: 980px) {}
 
 
 /* Small */
 
 @media screen and (max-width: 736px) {
-    /* Basic */
-    h1 {
-        font-size: 1.5em;
-        margin: 0;
-    }
-    h2 {
-        font-size: 1.2em;
-    }
-    h3 {
+    #header h1 {
         font-size: 1em;
     }
-    .logo {
-        width: 100%;
-        margin-left: 0;
-        display: block;
+    .resumen p {
+        font-size: 1em;
     }
-    /* List */
-    ul.labeled-icons li {
-        padding-left: 2em;
+    #footer {
+        font-size: 0.7em;
     }
-    ul.labeled-icons li h3 {
-        line-height: 1.75em;
-    }
-    /* Main */
-    #main {
-        margin: 0;
-        margin-left: 10%;
-        padding: 1.5em;
-    }
-    /*container*/
-    .container h1 {
-        font-size: 1.4em;
-    }
-    /*container*/
     #footer a {
-        font-size: 0.5em;
-        display: block;
+        display: inline-block;
+    }
+    .tecnologias {
+        display: none;
     }
 }
 
 
 /* XSmall */
 
-@media screen and (max-width: 480px) {
-    /*container*/
-    .container h1 {
-        font-size: 1em;
-    }
-    .container {
-        max-width: 100%;
-    }
-    .container li {
-        font-size: 0.7em;
-    }
-}
+@media screen and (max-width: 480px) {}
